# nyxlang

./: CMakeLists.txt  README.md
src/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.h
